tests/idris2/perror011/expected
Uncaught error: Error: Bracket is not properly closed.

Issue1345:2:1--2:2
 1 | infixr 0 -->
 2 | (-->) : (Type -> Type) -> (Type -> Type) -> Type
     ^

Uncaught error: Error: Bracket is not properly closed.

Issue1496-1:5:24--5:25
 1 | module Main
 2 | 
 3 | export
 4 | Show Really where
 5 |   show (Really err) =  ["RR"
                            ^

Uncaught error: Error: Bracket is not properly closed.

Issue1496-2:2:1--2:2
 1 | module X
 2 | [
     ^

Uncaught error: Pretty:5:24--5:25:Lexer error ("Bracket is not properly closed.")
